commit ke 2 - nat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="mint_blue">#A0E7E5</color>
     <color name="blue">#4A90E2</color>
+    <color name="mint">#E4F0FF</color>
 </resources>
