--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="mint_blue">#A0E7E5</color>
     <color name="blue">#4A90E2</color>
     <color name="mint">#E4F0FF</color>
+    <color name="grey">#4D000000</color>
 </resources>
