--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -34,9 +34,36 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="65dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
+            android:textSize="10pt"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="Ayo Lakukan Test" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="7pt"
+            android:textColor="@color/black"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="35dp"
+            android:text="Apakah kamu ingin melakukan test?" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="350dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="500dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded"
         android:backgroundTint="#1A000000"
         android:orientation="vertical"
@@ -54,7 +81,7 @@
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="70dp"
                 android:layout_weight="1"
                 android:src="@drawable/stress" />
         </LinearLayout>
@@ -66,6 +93,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
+            android:textColor="@color/black"
             android:text="Apakah anda ingin mengetahui anda mengalami depresi?"
             android:textAlignment="center"
             android:textSize="10pt" />
