--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity">
+    tools:context=".chat.ChatActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -78,7 +78,7 @@
                     android:textSize="25px"
                     android:textColor="@color/black"
                     android:layout_marginBottom="10dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -164,7 +164,7 @@
                     android:hint="Ketik pesan..."
                     android:padding="8dp"
                     android:layout_marginRight="145dp"
-                    android:background="null" />
+                    android:background="@color/white" />
                 <LinearLayout
                     android:id="@+id/llySend"
                     android:layout_width="wrap_content"
