update login (add model Akun)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,24 +65,24 @@
                 android:textColor="@color/black"
                 android:textSize="30dp" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="Username"
-                android:textColor="@color/black" />
+<!--            <TextView-->
+<!--                android:id="@+id/textView2"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginBottom="5dp"-->
+<!--                android:text="Username"-->
+<!--                android:textColor="@color/black" />-->
 
-            <EditText
-                android:id="@+id/edtUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/edt_border"
-                android:ems="10"
-                android:hint="Masukkan username Anda"
-                android:inputType="text"
-                android:padding="12dp" />
+<!--            <EditText-->
+<!--                android:id="@+id/edtUsername"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginBottom="20dp"-->
+<!--                android:background="@drawable/edt_border"-->
+<!--                android:ems="10"-->
+<!--                android:hint="Masukkan username Anda"-->
+<!--                android:inputType="text"-->
+<!--                android:padding="12dp" />-->
 
             <TextView
                 android:id="@+id/textView3"
