--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -447,14 +447,14 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Tidak pernah" />
+                        android:text="Tidak penting" />
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="Sangat sering" />
+                        android:text="Sangat penting" />
                 </LinearLayout>
 
                 <TextView
@@ -510,7 +510,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Sangan tidak nyaman" />
+                        android:text="Sangat tidak nyaman" />
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
