--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -81,6 +81,7 @@
                     android:layout_gravity="center_horizontal"/>
 
                 <TextView
+                    android:id="@+id/txvChatPembuka"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bubble"
@@ -92,13 +93,14 @@
                     android:layout_marginVertical="4dp"/>
 
                 <LinearLayout
+                    android:id="@+id/llyChatHasilTes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@drawable/bubble"
-                    android:padding="12dp"
                     android:layout_gravity="end"
-                    android:layout_marginTop="8dp">
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/bubble"
+                    android:orientation="vertical"
+                    android:padding="12dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -107,20 +109,22 @@
                         android:textColor="@color/white" />
 
                     <LinearLayout
+                        android:id="@+id/llyBoxHasil"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
+                        android:layout_marginTop="6dp"
                         android:background="@drawable/rounded"
                         android:backgroundTint="#FFD7D7"
-                        android:padding="10dp"
-                        android:layout_marginTop="6dp">
+                        android:orientation="vertical"
+                        android:padding="10dp">
 
                         <TextView
+                            android:id="@+id/txvSkorStatus"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
                             android:text="Skor Pasien : 47\nStatus: Mengalami depresi"
                             android:textAlignment="center"
-                            android:layout_gravity="center_horizontal"
                             android:textColor="@color/black"
                             android:textStyle="bold" />
 
