--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,7 +16,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/mint_blue"
+            android:background="@color/header"
             android:orientation="horizontal"
             android:padding="3dp">
 
@@ -30,7 +30,7 @@
                     android:layout_height="30dp"
                     android:src="@drawable/back"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginLeft="10dp" />
             </LinearLayout>
 
             <ImageView
@@ -44,20 +44,23 @@
 
             <TextView
                 android:id="@+id/txvNamaPsi"
-                android:layout_width="350dp"
+                android:layout_width="500dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:text=""
-                android:textColor="@color/black" />
+                android:textColor="@color/white"
+                android:textSize="10pt"
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <ScrollView
             android:id="@+id/chatScroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:background="@color/bg">
 
             <LinearLayout
                 android:id="@+id/chatContainer"
@@ -75,7 +78,7 @@
                     android:paddingRight="20dp"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:textSize="25px"
+                    android:textSize="13dp"
                     android:textColor="@color/black"
                     android:layout_marginBottom="10dp"
                     android:layout_gravity="center_horizontal"/>
@@ -90,7 +93,8 @@
                     android:padding="12dp"
                     android:layout_marginLeft="90dp"
                     android:layout_gravity="end"
-                    android:layout_marginVertical="4dp"/>
+                    android:layout_marginVertical="4dp"
+                    android:textSize="18dp"/>
 
                 <LinearLayout
                     android:id="@+id/llyChatHasilTes"
@@ -106,7 +110,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Ini adalah hasil tes saya"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/white"
+                        android:textSize="18dp"/>
 
                     <LinearLayout
                         android:id="@+id/llyBoxHasil"
@@ -129,6 +134,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/txvDetail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Klik untuk Informasi Lebih Lanjut"
@@ -142,9 +148,9 @@
         <LinearLayout
             android:id="@+id/chatInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="-55dp"
+            android:layout_marginTop="-62dp"
             android:orientation="horizontal"
             android:padding="8dp"
             android:background="#f5f5f5">
@@ -158,17 +164,19 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/chat_border">
+                android:layout_height="50dp"
+                android:background="@drawable/chat_border"
+                android:layout_gravity="center">
                 <EditText
                     android:id="@+id/edtChat"
-                    android:layout_width="0dp"
+                    android:layout_width="290dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="Ketik pesan..."
                     android:padding="8dp"
-                    android:layout_marginRight="145dp"
-                    android:background="@color/white" />
+                    android:background="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"/>
                 <LinearLayout
                     android:id="@+id/llySend"
                     android:layout_width="wrap_content"
