--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/mint_blue"
+            android:background="@color/header"
             android:orientation="horizontal"
             android:padding="3dp">
 
@@ -29,19 +29,21 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="600dp"
+                android:layout_width="750dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:text="Login"
-                android:textColor="@color/black" />
+                android:textColor="@color/white"
+                android:textSize="10pt"
+                android:textStyle="bold"/>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="413dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/gradient"
+            android:background="@color/bg"
             android:orientation="vertical"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
@@ -54,7 +56,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="30dp"
-                app:srcCompat="@drawable/logo" />
+                app:srcCompat="@drawable/logo_dark" />
 
             <TextView
                 android:id="@+id/textView"
@@ -65,24 +67,24 @@
                 android:textColor="@color/black"
                 android:textSize="30dp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/textView2"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="5dp"-->
-<!--                android:text="Username"-->
-<!--                android:textColor="@color/black" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/textView2"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginBottom="5dp"-->
+            <!--                android:text="Username"-->
+            <!--                android:textColor="@color/black" />-->
 
-<!--            <EditText-->
-<!--                android:id="@+id/edtUsername"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="20dp"-->
-<!--                android:background="@drawable/edt_border"-->
-<!--                android:ems="10"-->
-<!--                android:hint="Masukkan username Anda"-->
-<!--                android:inputType="text"-->
-<!--                android:padding="12dp" />-->
+            <!--            <EditText-->
+            <!--                android:id="@+id/edtUsername"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginBottom="20dp"-->
+            <!--                android:background="@drawable/edt_border"-->
+            <!--                android:ems="10"-->
+            <!--                android:hint="Masukkan username Anda"-->
+            <!--                android:inputType="text"-->
+            <!--                android:padding="12dp" />-->
 
             <TextView
                 android:id="@+id/textView3"
@@ -126,7 +128,9 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login" />
+                android:text="Login"
+                android:textColor="@color/white"
+                />
         </LinearLayout>
     </LinearLayout>
 
