--- a/app/src/main/res/layout/fragment_histori.xml
+++ b/app/src/main/res/layout/fragment_histori.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.histori.HistoriFragment"
-    android:background="@drawable/gradient">
+    android:background="@color/bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/mint_blue"
+            android:background="@color/header"
             android:orientation="horizontal"
             android:padding="3dp">
 
@@ -29,13 +29,15 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="600dp"
+                android:layout_width="750dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:text="Profil"
-                android:textColor="@color/black" />
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="10pt"/>
         </LinearLayout>
 
         <LinearLayout
@@ -63,7 +65,7 @@
                             android:layout_width="90dp"
                             android:layout_height="90dp"
                             android:layout_marginLeft="8dp"
-                            android:src="@drawable/psikolog" />
+                            android:src="@drawable/icha" />
 
                         <LinearLayout
                             android:id="@+id/llyEdit"
@@ -80,13 +82,13 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/txvH1"
-                                android:layout_width="match_parent"
+                                android:id="@+id/txvNamaUser"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
                                 android:layout_marginTop="20dp"
@@ -96,12 +98,24 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:id="@+id/txvUmurGender"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="19 Tahun | Perempuan" />
+                                android:text="19 Tahun | Perempuan"
+                                android:textColor="@color/black"/>
                         </LinearLayout>
-
+                        <LinearLayout
+                            android:id="@+id/llyLogout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="90dp">
+                            <ImageView
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:src="@drawable/logout"/>
+                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -182,7 +196,7 @@
                         <ListView
                             android:id="@+id/listHistori"
                             android:layout_width="match_parent"
-                            android:layout_height="330dp"
+                            android:layout_height="450dp"
                             android:divider="@android:color/transparent"
                             android:dividerHeight="10dp"
                             android:paddingBottom="20dp" />
