--- a/app/src/main/res/layout/fragment_konsul.xml
+++ b/app/src/main/res/layout/fragment_konsul.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.konsul.KonsulFragment"
-    android:background="@drawable/gradient">
+    android:background="@color/bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/mint_blue"
+            android:background="@color/header"
             android:orientation="horizontal"
             android:padding="3dp">
 
@@ -29,87 +29,90 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="600dp"
+                android:layout_width="750dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
                 android:text="Konsultasi"
-                android:textColor="@color/black" />
+                android:textColor="@color/white"
+                android:textSize="10pt"
+                android:textStyle="bold"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="12dp">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Daftar Psikolog"
+                android:textColor="@color/black"
+                android:textSize="22dp" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Silahkan pilih salah satu psikolog untuk berkonsultasi"
+                android:textColor="@color/black"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="12dp">
+                android:orientation="horizontal"
+                android:background="@drawable/edt_border"
+                android:layout_marginBottom="20dp"
+                android:padding="5dp"
+                android:elevation="5dp">
 
-                <TextView
-                    android:id="@+id/textView6"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/search"
+                    android:layout_gravity="center"
+                    android:paddingLeft="10dp"/>
+
+
+                <EditText
+                    android:id="@+id/edtSearch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Daftar Psikolog"
-                    android:textColor="@color/black"
-                    android:textSize="22dp" />
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Silahkan pilih salah satu psikolog untuk berkonsultasi"
-                    android:textColor="@color/black"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:background="@drawable/edt_border"
-                    android:layout_marginBottom="20dp"
-                    android:padding="5dp"
-                    android:elevation="5dp">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/search"
-                        android:layout_gravity="center"
-                        android:paddingLeft="10dp"/>
-
-
-                    <EditText
-                        android:id="@+id/edtSearch"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:inputType="text"
-                        android:hint="Search"
-                        android:padding="10dp"
-                        android:background="@color/white"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/containerPsikolog"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:hint="Search"
                     android:padding="10dp"
-                    android:background="@drawable/rounded"
-                    android:backgroundTint="@color/grey">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerPsikolog"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
-                    />
-                </LinearLayout>
-
-
-
-
+                    android:background="@color/white"/>
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/containerPsikolog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:background="@drawable/rounded"
+                android:backgroundTint="@color/header"
+                android:layout_marginBottom="80dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerPsikolog"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    />
+            </LinearLayout>
+
+
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
