--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,13 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#E4F0FF</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mint_blue">#A0E7E5</color>
-    <color name="blue">#4A90E2</color>
+    <color name="blue">#011936</color>
+    <color name="dark_blue">#4A90E2</color>
     <color name="mint">#E4F0FF</color>
     <color name="grey">#26000000</color>
     <color name="merah_muda">#FFD7D7</color>
@@ -17,4 +18,6 @@
     <color name="red">#9D030C</color>
     <color name="brown">#634301</color>
     <color name="deep_green">#1E5505</color>
+    <color name="bg">#E4F0FF</color>
+    <color name="header">#011936</color>
 </resources>
