--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -29,7 +29,7 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="750dp"
+                android:layout_width="700dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -68,8 +68,8 @@
         <LinearLayout
             android:id="@+id/llyAwal"
             android:layout_width="380dp"
-            android:layout_height="670dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="600dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/rounded"
             android:backgroundTint="#1A011936"
             android:orientation="vertical"
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="150dp">
+                android:layout_marginTop="120dp">
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -117,11 +117,11 @@
         <ScrollView
             android:id="@+id/llyForm"
             android:layout_width="380dp"
-            android:layout_height="670dp"
+            android:layout_height="600dp"
             android:layout_gravity="center"
             android:background="@drawable/rounded"
             android:backgroundTint="#1A011936"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:paddingTop="10dp"
             android:visibility="gone"
             android:paddingBottom="15dp"
@@ -738,7 +738,7 @@
                     android:inputType="text"
                     android:hint="Masukkan jam tidur Anda"
                     android:focusable="false"
-                    android:clickable="true"/>
+                    android:clickable="true" />
 
                 <TextView
                     android:id="@+id/txvJamBangun"
@@ -868,15 +868,15 @@
         <LinearLayout
             android:id="@+id/llyHasil"
             android:layout_width="380dp"
-            android:layout_height="670dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="600dp"
+            android:layout_marginTop="5dp"
             android:orientation="vertical"
             android:visibility="gone"
             android:layout_gravity="center">
             <LinearLayout
                 android:id="@+id/llyHasilBG"
                 android:layout_width="match_parent"
-                android:layout_height="600dp"
+                android:layout_height="550dp"
                 android:background="@drawable/rounded"
                 android:backgroundTint="#FFD7D7"
                 android:padding="10dp">
@@ -927,7 +927,7 @@
                         android:text="Berdasarkan jawaban Anda, sistem kami menemukan bahwa Anda memiliki risiko lebih tinggi mengalami depresi. Hal ini menunjukkan bahwa penting untuk segera mengambil langkah dan berkonsultasi dengan psikolog.\n\nBeberapa faktor yang mungkin meningkatkan risiko Anda meliputi tekanan emosional yang berkepanjangan, riwayat gangguan kesehatan mental dalam keluarga, dan gejala tertentu seperti merasa sedih terus-menerus, kehilangan minat pada aktivitas, atau kesulitan tidur. Hasil ini bukanlah diagnosis medis, melainkan panduan untuk membantu Anda lebih memahami kondisi kesehatan mental Anda.\n\nKami menyarankan Anda untuk berbicara dengan psikolog yang dapat membantu Anda memahami situasi ini lebih dalam dan memberikan langkah-langkah penanganan yang sesuai. "
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="15dp" />
+                        android:textSize="12dp" />
                 </LinearLayout>
             </LinearLayout>
             <TextView
@@ -942,7 +942,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mulai Konsultasi"
-                android:textColor="@color/blue"
+                android:textColor="@color/dark_blue"
                 android:textStyle="bold"
                 android:textAlignment="center"/>
         </LinearLayout>
